Better error handling, html sanitizing, added reviewAdd
