# api/swagger.yaml
@@ -1065,6 +1065,46 @@ paths:
         404:
           description: "Review not found!"
       x-swagger-router-controller: "Review"
+  /books/{bookId}/reviews/add:
+    post:
+      tags:
+      - "review"
+      - "user"
+      - "book"
+      summary: "Add a new review"
+      description: "Add a new review to the given book"
+      operationId: "bookAddReviewPOST"
+      consumes:
+      - "application/x-www-form-urlencoded"
+      parameters:
+      - name: "bookId"
+        in: "path"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "rating"
+        in: "formData"
+        required: true
+        type: "integer"
+        maximum: 5
+        minimum: 1
+        format: "int32"
+      - name: "title"
+        in: "formData"
+        required: false
+        type: "string"
+      - name: "text"
+        in: "formData"
+        required: false
+        type: "string"
+      responses:
+        200:
+          description: "Successful operation"
+        400:
+          description: "You provided invalid data!"
+        403:
+          description: "You must login to perform this operation!"
+      x-swagger-router-controller: "Review"
 definitions:
   User:
     type: "object"
@@ -1104,12 +1144,12 @@ definitions:
         country: "Italy"
         province: "CO"
         city: "Como"
-        latitude: 6.02745618307040320615897144307382404804229736328125
+        latitude: 6.027456183070403
         address_id: 1
         street_line2: "11"
         street_line1: "Via Valleggio"
         zip_code: "22100"
-        longitude: 1.46581298050294517310021547018550336360931396484375
+        longitude: 1.4658129805029452
       user_id: 1
       surname: "Rossi"
       birth_date: "2000-01-23"
@@ -1151,15 +1191,15 @@ definitions:
             country: "Italy"
             province: "CO"
             city: "Como"
-            latitude: 6.02745618307040320615897144307382404804229736328125
+            latitude: 6.027456183070403
             address_id: 1
             street_line2: "11"
             street_line1: "Via Valleggio"
             zip_code: "22100"
-            longitude: 1.46581298050294517310021547018550336360931396484375
+            longitude: 1.4658129805029452
           name: "Zanichelli"
           description: "description"
-        average_rating: 5.962133916683182377482808078639209270477294921875
+        average_rating: 5.962133916683182
         theme:
           name: "name"
           description: "description"
@@ -1192,15 +1232,15 @@ definitions:
             country: "Italy"
             province: "CO"
             city: "Como"
-            latitude: 6.02745618307040320615897144307382404804229736328125
+            latitude: 6.027456183070403
             address_id: 1
             street_line2: "11"
             street_line1: "Via Valleggio"
             zip_code: "22100"
-            longitude: 1.46581298050294517310021547018550336360931396484375
+            longitude: 1.4658129805029452
           name: "Zanichelli"
           description: "description"
-        average_rating: 5.962133916683182377482808078639209270477294921875
+        average_rating: 5.962133916683182
         theme:
           name: "name"
           description: "description"
@@ -1285,15 +1325,15 @@ definitions:
           country: "Italy"
           province: "CO"
           city: "Como"
-          latitude: 6.02745618307040320615897144307382404804229736328125
+          latitude: 6.027456183070403
           address_id: 1
           street_line2: "11"
           street_line1: "Via Valleggio"
           zip_code: "22100"
-          longitude: 1.46581298050294517310021547018550336360931396484375
+          longitude: 1.4658129805029452
         name: "Zanichelli"
         description: "description"
-      average_rating: 5.962133916683182377482808078639209270477294921875
+      average_rating: 5.962133916683182
       theme:
         name: "name"
         description: "description"
@@ -1408,12 +1448,12 @@ definitions:
       country: "Italy"
       province: "CO"
       city: "Como"
-      latitude: 6.02745618307040320615897144307382404804229736328125
+      latitude: 6.027456183070403
       address_id: 1
       street_line2: "11"
       street_line1: "Via Valleggio"
       zip_code: "22100"
-      longitude: 1.46581298050294517310021547018550336360931396484375
+      longitude: 1.4658129805029452
   Event:
     type: "object"
     required:
@@ -1447,12 +1487,12 @@ definitions:
         country: "Italy"
         province: "CO"
         city: "Como"
-        latitude: 6.02745618307040320615897144307382404804229736328125
+        latitude: 6.027456183070403
         address_id: 1
         street_line2: "11"
         street_line1: "Via Valleggio"
         zip_code: "22100"
-        longitude: 1.46581298050294517310021547018550336360931396484375
+        longitude: 1.4658129805029452
       presented_book:
         picture_path: "pic1.jpg"
         price:
@@ -1469,15 +1509,15 @@ definitions:
             country: "Italy"
             province: "CO"
             city: "Como"
-            latitude: 6.02745618307040320615897144307382404804229736328125
+            latitude: 6.027456183070403
             address_id: 1
             street_line2: "11"
             street_line1: "Via Valleggio"
             zip_code: "22100"
-            longitude: 1.46581298050294517310021547018550336360931396484375
+            longitude: 1.4658129805029452
           name: "Zanichelli"
           description: "description"
-        average_rating: 5.962133916683182377482808078639209270477294921875
+        average_rating: 5.962133916683182
         theme:
           name: "name"
           description: "description"
@@ -1522,12 +1562,12 @@ definitions:
         country: "Italy"
         province: "CO"
         city: "Como"
-        latitude: 6.02745618307040320615897144307382404804229736328125
+        latitude: 6.027456183070403
         address_id: 1
         street_line2: "11"
         street_line1: "Via Valleggio"
         zip_code: "22100"
-        longitude: 1.46581298050294517310021547018550336360931396484375
+        longitude: 1.4658129805029452
       name: "Zanichelli"
       description: "description"
   Genre:
@@ -1644,12 +1684,12 @@ definitions:
         country: "Italy"
         province: "CO"
         city: "Como"
-        latitude: 6.02745618307040320615897144307382404804229736328125
+        latitude: 6.027456183070403
         address_id: 1
         street_line2: "11"
         street_line1: "Via Valleggio"
         zip_code: "22100"
-        longitude: 1.46581298050294517310021547018550336360931396484375
+        longitude: 1.4658129805029452
       order_id: 0
       items:
       - picture_path: "pic1.jpg"
@@ -1667,15 +1707,15 @@ definitions:
             country: "Italy"
             province: "CO"
             city: "Como"
-            latitude: 6.02745618307040320615897144307382404804229736328125
+            latitude: 6.027456183070403
             address_id: 1
             street_line2: "11"
             street_line1: "Via Valleggio"
             zip_code: "22100"
-            longitude: 1.46581298050294517310021547018550336360931396484375
+            longitude: 1.4658129805029452
           name: "Zanichelli"
           description: "description"
-        average_rating: 5.962133916683182377482808078639209270477294921875
+        average_rating: 5.962133916683182
         theme:
           name: "name"
           description: "description"
@@ -1708,15 +1748,15 @@ definitions:
             country: "Italy"
             province: "CO"
             city: "Como"
-            latitude: 6.02745618307040320615897144307382404804229736328125
+            latitude: 6.027456183070403
             address_id: 1
             street_line2: "11"
             street_line1: "Via Valleggio"
             zip_code: "22100"
-            longitude: 1.46581298050294517310021547018550336360931396484375
+            longitude: 1.4658129805029452
           name: "Zanichelli"
           description: "description"
-        average_rating: 5.962133916683182377482808078639209270477294921875
+        average_rating: 5.962133916683182
         theme:
           name: "name"
           description: "description"
@@ -1779,7 +1819,7 @@ definitions:
           type: "string"
     example:
       isbn: "isbn"
-      average_rating: 1.46581298050294517310021547018550336360931396484375
+      average_rating: 1.4658129805029452
       book_id: 0
       abstract: "abstract"
       title: "title"
@@ -1787,7 +1827,7 @@ definitions:
       themes:
       - "themes"
       - "themes"
-      price: 6.02745618307040320615897144307382404804229736328125
+      price: 6.027456183070403
       genres:
       - "genres"
       - "genres"
